--- a/YouTubeScreenShot/manifest.json
+++ b/YouTubeScreenShot/manifest.json
@@ -1,17 +1,17 @@
 {
-  "name": "YouTubeScreenShot",
-  "description": "ワンクリックでYouTubeのスクショを撮るよ。",
-  "author": "micelle",
+  "name": "YouTubeScreenShotEverySeconds",
+  "description": "YouTube動画のスクリーンショットを1秒ごとに連続で撮ってダウンロードします。",
+  "author": "motoy3d",
   "version": "1.0.0",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "icons": {
     "16": "icons/16.png",
-    "64": "icons/64.png",
+    "48": "icons/48.png",
     "128": "icons/128.png"
   },
   "content_scripts": [
     {
-      "matches": ["http://www.youtube.com/*", "https://www.youtube.com/*"],
+      "matches": ["https://www.youtube.com/*"],
       "js": ["src/script.js"],
       "css": ["src/styles.css"]
     }
