--- a/YouTubeScreenShotEverySeconds/manifest.json
+++ b/YouTubeScreenShotEverySeconds/manifest.json
@@ -13,7 +13,8 @@
     {
       "matches": ["https://www.youtube.com/*"],
       "js": ["src/script.js"],
-      "css": ["src/styles.css"]
+      "css": ["src/styles.css"],
+      "run_at": "document_end"
     }
   ]
 }
